# wenzap

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TECH_DEBT.md  docker-compose.yml
apps/api/: .env.example  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_users.py  002_create_workspaces.py  003_create_workspace_members.py  004_create_plans.py  005_create_workspace_subscriptions.py  (+73 more)
apps/api/app/: config.py  database.py  enums.py  main.py
apps/api/scripts/: seed_billing_plans.py
apps/api/tests/: conftest.py  test_agent_avatar.py  test_agent_catalog_scope.py  test_agent_context_builder.py  test_agent_follow_up_settings.py  test_agent_guardrails.py  test_agent_knowledge_bases.py  test_agent_llm_executor.py  test_agent_patch_semantics.py  test_agent_plan_limit.py  test_agent_run_service.py  test_agent_runs_api.py  test_agent_settings.py  test_agent_status.py  test_agent_test.py  test_agent_test_rag.py  test_agent_test_run_rag_models.py  test_agent_tool_calling_integration.py  test_agent_tools.py  test_agent_tools_batch2.py  test_agents.py  test_ai_models.py  test_auth.py  test_auth3_protected_routes.py  test_auth_backend.py  test_auth_email_verification.py  test_auto_reply_scheduler.py  test_catalog.py  test_catalog_agent_control.py  test_catalog_embedding.py  test_catalog_import.py  test_catalog_media.py  test_catalog_media_delivery.py  test_catalog_plan_limit.py  test_catalog_retrieval.py  test_channel_credentials_service.py  test_channel_model.py  test_channel_plan_limit.py  test_channels_api.py  test_chunking_service.py  (+68 more)
(+409 files in other folders)
