[project]
name = "nexbrain-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "anthropic>=0.84,<1.0",
    "pgvector>=0.4.2",
    "openai>=2.43.0",
    "pypdf>=6.14.2",
    "argon2-cffi>=23.1",
    "sentry-sdk[fastapi]>=2.63.0",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
